# SegmentDisplayLibrary

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.cpp
include/display/: SegmentDisplay.h
include/display/animations/: Animations.h
src/display/: SegmentDisplay.cpp
src/template/: Template.cpp
